# SecurityCameraServer

./: CMakeLists.txt
include/: AbstractSocket.h  LibAVHLS.h  Socket.h
src/: AbstractSocket.cpp  LibAVHLS.cpp  Socket.cpp  main.cpp
